fix: fixed header feeling too cramped on certain mobile devices

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,10 +1,11 @@
 .header {
   background: var(--header-gradient);
   display: flex;
-  height: 150px;
+  min-height: 150px;
   justify-content: space-between;
   padding: 20px;
   padding-top: calc(env(safe-area-inset-top) + 20px);
+  padding-bottom: 60px;
   position: relative;
 
   .header_left{
